# fastlangml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  benchmark_results.json  pyproject.toml
.github/workflows/: fastlangml.yml  publish.yml  tests.yml
scripts/: commit.sh  publish.sh
src/fastlangid/: __init__.py  detector.py  normalize.py  result.py
src/fastlangid/backends/: __init__.py  fasttext_backend.py  langdetect_backend.py  langid_backend.py  lingua_backend.py  pycld3_backend.py
src/fastlangid/cli/: __init__.py  main.py
src/fastlangid/context/: __init__.py  conversation.py
src/fastlangid/data/: default_hints.json
src/fastlangid/ensemble/: __init__.py  voting.py
src/fastlangid/hints/: __init__.py  dictionary.py  persistence.py
src/fastlangid/preprocessing/: __init__.py  name_filter.py  proper_noun_filter.py  script_filter.py
src/fastlangml/: __init__.py  cache.py  codeswitching.py  detector.py  normalize.py
src/fastlangml/backends/: __init__.py  fastlangid_backend.py  fasttext_backend.py  langdetect_backend.py  langid_backend.py  lingua_backend.py  pycld3_backend.py
src/fastlangml/cli/: main.py
src/fastlangml/context/: __init__.py  conversation.py  disk_store.py  redis_store.py
src/fastlangml/ensemble/: confusion.py  voting.py
src/fastlangml/hints/: dictionary.py  persistence.py
src/fastlangml/preprocessing/: name_filter.py  proper_noun_filter.py  script_filter.py
tests/: __init__.py  test_benchmarks.py  test_codeswitching.py  test_confusion.py  test_context.py  test_context_load.py  test_context_store.py  test_custom_backend.py  test_detector.py  test_hints.py  test_proper_noun_filter.py  test_script_filter.py  test_voting.py
