[tool.poetry]
name = "fastlangml"
version = "1.1.0"
description = "FastLangML: High-accuracy language detection for chat, SMS & conversational text. Ensemble of FastText, Lingua, langdetect, CLD3 with context tracking, code-switching detection & 170+ languages."
readme = "README.md"
license = "MIT"
authors = ["PRajan"]
keywords = [
    "language-detection",
    "language-identification",
    "langid",
    "detect-language",
    "nlp",
    "natural-language-processing",
    "fasttext",
    "fasttext-langdetect",
    "lingua",
    "lingua-language-detector",
    "langdetect",
    "pycld3",
    "cld3",
    "text-classification",
    "conversational-ai",
    "chatbot",
    "multilingual",
    "polyglot",
    "code-switching",
    "spanglish",
    "ensemble",
    "machine-learning",
    "sms",
    "chat",
    "customer-service",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [{include = "fastlangml", from = "src"}]

[tool.poetry.urls]
Homepage = "https://github.com/pnrajan/FastLangML"
Repository = "https://github.com/pnrajan/FastLangML"
Issues = "https://github.com/pnrajan/FastLangML/issues"
Documentation = "https://github.com/pnrajan/FastLangML#readme"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cachetools = ">=5.0.0"
tomli = {version = ">=2.0.0", python = "<3.11"}

# Optional backend dependencies
fasttext-langdetect = {version = ">=1.0.5", optional = true}
numpy = {version = "<2", optional = true}
fastlangid = {version = ">=1.0.11", optional = true}
langdetect = {version = ">=1.0.9", optional = true}
lingua-language-detector = {version = ">=2.0.0", optional = true}
pycld3 = {version = ">=0.22", optional = true}
langid = {version = ">=1.1.6", optional = true}

# Optional storage dependencies
diskcache = {version = ">=5.0.0", optional = true}
redis = {version = ">=4.0.0", optional = true}

# Optional NLP dependencies
spacy = {version = ">=3.5.0", optional = true}
rapidfuzz = {version = ">=3.0.0", optional = true}

# Optional TOML writing
tomli-w = {version = ">=1.0.0", optional = true}

[tool.poetry.extras]
fasttext = ["fasttext-langdetect", "numpy"]
fastlangid = ["fastlangid"]
langdetect = ["langdetect"]
lingua = ["lingua-language-detector"]
pycld3 = ["pycld3"]
langid = ["langid"]
diskcache = ["diskcache"]
redis = ["redis"]
spacy = ["spacy"]
fuzzy = ["rapidfuzz"]
toml = ["tomli-w"]
all = [
    "fasttext-langdetect",
    "numpy",
    "fastlangid",
    "langdetect",
    "lingua-language-detector",
    "pycld3",
    "langid",
    "spacy",
    "rapidfuzz",
    "diskcache",
    "redis",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = ">=4.0"
mypy = ">=1.0"
ruff = ">=0.1.0"
twine = ">=4.0"
build = ">=1.0"

[tool.poetry.scripts]
fastlangml = "fastlangml.cli.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped", "no-untyped-def", "no-untyped-call", "attr-defined", "assignment", "arg-type", "return-value", "dict-item", "name-defined", "unused-ignore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
]
